--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -7,28 +7,27 @@ body {
     background-color: #FEFCFB;
   }
   
-  .signup-page{
-    background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(147, 210, 150, 0.8));
+  /* .signup-page{
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.8), rgba(61, 160, 68, 0.8));
 
-  }
-  .signup-page{
+  } */
+  /* .signup-page{
     background-image: url('../assests/demo.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    /* filter: blur(3px); */
 
 
-  }
+  } */
   .mains-container {
     /* display: flex; */
     /* justify-content: center;
     align-items: center; */
     height: 100vh;
     gap: 20px;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(147, 210, 150, 0.8));
-        padding: 20px;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.8), rgba(61, 160, 68, 0.8));
+            padding: 20px;
   }
   .logo {
               text-align: center;
@@ -61,6 +60,7 @@ body {
      /* background: linear-gradient(#b7bbc7, #021d35);  */
     border-radius: 12px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    /* background: linear-gradient(to right, rgba(255, 255, 255, 0.8), rgba(80, 165, 85, 0.8)); */
     max-width: 400px;
     margin: 50px auto;
     padding: 30px 30px;
@@ -75,41 +75,45 @@ body {
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: #eeeeee4b;
+      /* background-color: #eeeeee4b; */
       border-radius: 3px;
       letter-spacing: 1px;
       transition: all 0.2s linear;
       cursor: pointer;
       border: none;
-      background: #fff;
-      padding: 8px 12px;
-      font-size: 0.9rem;
-      /* New positioning properties */
+background: none;
+      padding: 10px 14px;
+     
       position: fixed;
-      top: 20px;
-      left: 20px;
+      top: 30px;
+      left: 30px;
       z-index: 1000;
+      font-weight: bold;
   }
   
   .back-button > svg {
-      margin-right: 5px;
-      font-size: 16px;
+      /* margin-right: 5px; */
+      font-size: 25px;
       transition: all 0.4s ease-in;
+      color: black;
+      font-weight: bold;
   }
   
   .back-button:hover > svg {
       font-size: 1.2em;
       transform: translateX(-5px);
+      font-weight: bold;
   }
   
-  .back-button:hover {
+  /* .back-button:hover {
       box-shadow: 9px 9px 33px #d1d1d1, -9px -9px 33px #ffffff;
       transform: translateY(-2px);
-  } 
+  }  */
   .form-label {
     display: block;
     font-size: 1rem;
     color: black;
+    font-weight: bold;
     margin-bottom: 8px;
   }
   
@@ -197,18 +201,21 @@ body {
   .text-small {
     font-size: 0.875rem;
     color:black;
-
+    font-weight: bold;
     margin-top: 15px;
   }
 
   .text-small a{
-    color: white;
+    
+    font-size: 0.875rem;
+
+    color: #16a34a;
     font-weight: bold;
 
     
   }
 
   .text-small a:hover{
-    color: #16a34a;
+    color: white;
     /* text-decoration: underline; */
   }
