--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -15,7 +15,7 @@
 } */
 
 .home-page {
-    background-image: url('../assests/demo.jpg');
+    background-image: url('../assests/db1.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
