--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -6,7 +6,7 @@ body {
 }
 
 .login-page{
-  background: linear-gradient(to right, rgba(255, 255, 255, 0.8), rgba(61, 160, 68, 0.8));
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.8), #9670c7);
 }
 
 .main-container {
@@ -33,7 +33,7 @@ body {
 .logos {
   text-align: center;
   margin-bottom: 2rem;
-  color: #05671f;
+  color: #722c98;
 /* color: #023336; */
   font-size: 1.5rem;
   font-weight: bold;
@@ -98,7 +98,7 @@ h2 {
 .notification {
   text-align: center;
   padding: 10px;
-  background-color: #16a34a;
+  background-color: #391b49;
   color: white;
   font-weight: bold;
   margin: 10px 0;
@@ -138,12 +138,12 @@ h2 {
 }
 
 .btn-primary {
-  background-color: #05671f;
+  background-color: #391b49;
   color: white;
 }
 
 .btn-primary:hover {
-  background-color: #45a049;
+  background-color: #794d91;
 }
 
 .final {
@@ -155,7 +155,7 @@ h2 {
 }
 
 .final a {
-  color: #05671f;
+  color: #391b49;
   text-decoration: none;
   font-weight: bold;
 }
